--- a/src/app/user-data/user-data.component.html
+++ b/src/app/user-data/user-data.component.html
@@ -43,7 +43,7 @@
                                     <br>
                                     <a href="{{detail.html_url}}" target="_blank" class="btn btn-outline-warning"><small>GITHUB</small></a>
                                        
-                                </div>
+                                </div>, 
                             </div>
                         </div>        
 
